# CG_GroupProject

./: CMakeLists.txt  LICENSE  README.md
import/include/: stb_imag.h
import/include/glad/: glad.h
import/source/glad/: glad.c
include/: camera.h  helper.h  key.h  mesh.h  object.h  physics.h  shape.h  world.h
include/model/: ball.h  cube.h  fairy.h  model.h
include/shader/: fairyShader.h  meshShader.h  shader.h
lib/: glfw3.lib
shader/: basicShader.frag  basicShader.vert  fairyShader.frag  fairyShader.vert  textureShader.frag
shader/SH/: lightShader.frag  lightShader.vert  multi_tex_lightShader.frag  multi_tex_lightShader.vert  texShader.frag  texShader.vert  tex_lightShader.vert
source/: camera.cpp  helper.cpp  key.cpp  main.cpp  mesh.cpp  object.cpp  physics.cpp  shape.cpp  world.cpp
source/model/: ball.cpp  cube.cpp  fairy.cpp
source/shader/: boxShader.cpp  fairyShader.cpp  meshShader.cpp  shader.cpp
